<resources>
    <string name="app_name">Elbicare</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Masuk</string>
    <string name="ic_splashscreen">Ikon Splashscreen</string>
    <string name="network_unavailable">Tidak Ada Koneksi Internet</string>
    <string name="login_page">Login Page</string>
    <string name="ic_login">Ikon Login</string>
    <string name="title_hospital">Rumah Sakit Dr. Soetomo</string>
    <string name="title_hospital_desc">Sistem Informasi Kondisi Pasien MDR-TB&amp;Covid-19</string>
    <string name="username">Username</string>
    <string name="id_user_type_patient">0</string>
    <string name="id_user_type_companion">1</string>
    <string name="success_">1</string>
    <string name="ic_item_dashboard">Ikon Item Dashboard</string>
    <string name="menu_report">Laporan</string>
    <string name="menu_history">Riwayat</string>
    <string name="menu_profile">Profile</string>
    <string name="condition">Kondisi</string>
    <string name="title_covid">Covid 19</string>
    <string name="report_symptoms">Laporkan Gejala</string>
    <string name="title_status">Status: %1$s </string>
    <string name="title_skip_drugs">Jumlah Obat Lewat: %1$s </string>
    <string name="title_drink_drugs">Jumlah Obat Minum: %1$s </string>
    <string name="report_needed">Laporkan Kebutuhan</string>
    <string name="cough">Batuk</string>
    <string name="cough_format">Batuk: %s</string>
    <string name="yes_">Ya</string>
    <string name="no_">Tidak</string>
    <string name="fever">Demam</string>
    <string name="fever_format">Demam: %s</string>
    <string name="limp">Lemas</string>
    <string name="limp_format">Lemas: %s</string>
    <string name="nausea">Mual</string>
    <string name="nausea_format">Mual: %s</string>
    <string name="headache">Pusing</string>
    <string name="headache_format">Pusing: %s</string>
    <string name="breathless">Sesak Nafas</string>
    <string name="breathless_format">Sesak Nafas: %s</string>
    <string name="submit">Submit</string>
    <string name="information">Informasi</string>
    <string name="confirm_send">Apakah Data Sudah Benar?</string>
    <string name="kind_of_need">Jenis Kebutuhan</string>
    <string name="desc">Deskripsi</string>
    <string name="type_needed">Jenis Kebutuhan: %s</string>
    <string name="reporting_symptoms">Laporan Gejala</string>
    <string name="reporting_needed">Laporan Kebutuhan</string>
    <string name="title_hello">Hello, %s</string>
    <string name="logout">Keluar</string>
    <string name="companion">Pendamping</string>
    <string name="address">Alamat</string>
    <string name="weight_height">Berat/ Tinggi Badan</string>
    <string name="steps">Tahap</string>
    <string name="category">Kategori</string>
    <string name="weight_height_format">%skg / %scm</string>
    <string name="change_password">Ganti Password</string>
    <string name="old_password">Password Lama</string>
    <string name="new_password">Password Baru</string>
    <string name="there_are_empty_data">Terdapat Data Kosong</string>
    <string name="menu_patient">Pasien</string>
    <string name="name_patient">Nama Pasien: %s</string>
    <string name="category_patient">Kategori: %s</string>
    <string name="address_patient">Alamat: %s</string>
    <string name="steps_patient">Tahapan: %s</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_header">Report and Stop Tuberculosis</string>
    <string name="input_report_symptoms">Masukkan Gejala</string>
    <string name="password_not_match">Password Tidak Sama</string>
    <string name="cannot_empty">Tidak Dapat Kosong</string>
    <string name="wrong_email_format">Format Email Salah</string>
    <string name="ok_">OK</string>
    <string name="confirmation">Apakah Anda Yakin?</string>
    <string name="dokter">Dokter</string>
    <string name="symptoms">Gejala</string>
    <string name="drink_status">Status Minum</string>
    <string name="importance_condition">Keadaan Khusus</string>
    <string name="title_activity_bottom">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="history">Riwayat</string>
</resources>
