<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="models"
            type="com.codedirect.audiometer.ui.profile.ProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/margin_default"
        tools:context=".ui.profile.change_password.ChangePasswordFragment">

        <TextView
            android:id="@+id/tv_change_password_title"
            style="@style/TextViewGeneral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:text="@string/change_password"
            android:textSize="@dimen/text_default_22"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_change_password_old"
            style="@style/TextInputLayoutBoxStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:background="@color/primaryColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_change_password_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_change_password_old"
                style="@style/TextInputLayoutBoxStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/old_password" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_change_password_new"
            style="@style/TextInputLayoutBoxStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@color/primaryColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ti_change_password_old">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_change_password_new"
                style="@style/TextInputLayoutBoxStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_profile_logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:fontFamily="@font/quicksand"
            android:onClick="@{()->models._openSubmitChangePassword()}"
            android:padding="@dimen/margin_default"
            android:text="@string/submit"
            android:textSize="@dimen/text_default"
            android:textStyle="bold"
            app:backgroundTint="@color/primaryDarkColor"
            app:cornerRadius="@dimen/margin_default"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ti_change_password_new" />

        <ProgressBar
            android:id="@+id/loading_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@android:color/white"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/btn_profile_logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>