<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.codedirect.elbicare.ui.report_patient.ReportPatientViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.report_patient.ReportPatientFragment">

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded"
            app:layout_constraintBottom_toTopOf="@+id/gl_dashboard_report_patient"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_dashboard_report_patient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <TextView
            android:id="@+id/tv_report_patient_condition"
            style="@style/TextViewGeneral"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:text="@string/condition"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_default_22"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_report_patient_condition_content"
            style="@style/TextViewGeneral"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_default_18"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_report_patient_condition"
            tools:text="STABIL" />

        <TextView
            android:id="@+id/tv_report_patient_date"
            style="@style/TextViewGeneral"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_default_18"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_report_patient_condition_content"
            tools:text="03-10-2020" />

        <TextView
            android:id="@+id/tv_report_patient_status"
            style="@style/TextViewGeneral"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:text="@string/title_skip_drugs"
            android:textAlignment="center"
            android:textSize="@dimen/text_default_18"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/tv_report_patient_drugs"
            style="@style/TextViewGeneral"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:text="@string/title_drink_drugs"
            android:textAlignment="center"
            android:textSize="@dimen/text_default_18"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_report_patient_status" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_report_patient_symptoms"
            style="@style/ButtonGeneralStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:onClick="@{()->model._openReportPatientSymptoms()}"
            android:padding="@dimen/margin_small"
            android:text="@string/report_symptoms"
            android:textSize="@dimen/text_default"
            android:textStyle="bold"
            app:backgroundTint="@android:color/holo_red_dark"
            app:cornerRadius="@dimen/margin_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_report_patient_needed" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_report_patient_needed"
            style="@style/ButtonGeneralStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:onClick="@{()->model._openReportPatientNeeded()}"
            android:padding="@dimen/margin_small"
            android:text="@string/report_needed"
            android:textSize="@dimen/text_default"
            android:textStyle="bold"
            app:backgroundTint="@android:color/holo_green_dark"
            app:cornerRadius="@dimen/margin_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_report_patient_drugs" />

        <ProgressBar
            android:id="@+id/loading_report_patient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/primaryDarkColor"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_report_patient_symptoms" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>